force-app/main/default/objects/blng__InvoiceLine__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <formula>IF(  CreatedFromServiceBillingBatch__c  = true  ,   blng__Invoice__r.Contract__r.Id  , blng__Invoice__r.Contract_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>