force-app/main/default/objects/blng__InvoiceLine__c/fields/CreatedFromServiceBillingBatch__c.field-meta.xml
<CustomField>
    <fullName>CreatedFromServiceBillingBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates that this record has been created from ServiceBillingProcessBatch process.</description>
    <label>CreatedFromServiceBillingBatch?</label>
    <type>Checkbox</type>
</CustomField>