force-app/main/default/objects/blng__InvoiceLine__c/fields/Monthly_Net_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Net_Unit_Price__c</fullName>
    <formula>blng__OrderProduct__r.SBQQ__QuoteLine__r.Net_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Net Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>