force-app/main/default/objects/blng__InvoiceLine__c/fields/Netsuite_InvoiceLine_Id__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_InvoiceLine_Id__c</fullName>
    <label>Netsuite Invoiceline Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>