force-app/main/default/objects/blng__InvoiceLine__c/fields/NS_Inv_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Inv_Internal_ID__c</fullName>
    <label>NS Inv Internal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>