force-app/main/default/objects/blng__InvoiceLine__c/fields/NS_Line_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>NS_Line_Sequence_Number__c</fullName>
    <label>NS Line Sequence Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>