force-app/main/default/objects/blng__InvoiceLine__c/fields/NS_Sales_Order_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>NS_Sales_Order_Line_Id__c</fullName>
    <label>NS Sales Order Line Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>