force-app/main/default/objects/blng__InvoiceLine__c/fields/OA_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>OA_Invoice_Id__c</fullName>
    <formula>OA_Slip_Header__r.OA_Invoice_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OA Invoice Id</label>
    <type>Text</type>
</CustomField>