force-app/main/default/objects/blng__InvoiceLine__c/fields/OA_Slip_Header__c.field-meta.xml
<CustomField>
    <fullName>OA_Slip_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OA Slip Header</description>
    <label>OA Slip Header</label>
    <referenceTo>OA_Slip_Header__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>