force-app/main/default/objects/blng__InvoiceLine__c/fields/Support_Level__c.field-meta.xml
<CustomField>
    <fullName>Support_Level__c</fullName>
    <formula>TEXT(blng__OrderProduct__r.Support_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Level</label>
    <type>Text</type>
</CustomField>