force-app/main/default/objects/blng__InvoiceLine__c/fields/T_DupProdCode__c.field-meta.xml
<CustomField>
    <fullName>T_DupProdCode__c</fullName>
    <label>T_Duplicate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>