force-app/main/default/objects/blng__InvoiceLine__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>blng__ARStatus__c</columns>
    <columns>blng__Balance__c</columns>
    <columns>blng__Invoice__c</columns>
    <columns>Netsuite_InvoiceLine_Id__c</columns>
    <columns>blng__OrderProduct__c</columns>
    <columns>blng__StartDate__c</columns>
    <columns>T_IsMigrated__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>T_IsMigrated__c</field>
        <operation>equals</operation>
        <value>TRUE</value>
    </filters>
    <label>All</label>
</ListView>